[workspace]
members = [
	"hash-db",
	"memory-db",
	"hash256-std-hasher",
	"test-support/keccak-hasher",
	"test-support/reference-trie",
	"test-support/trie-standardmap",
	"test-support/trie-bench",
	"trie-db",
	"trie-root"
]

[patch.crates-io]
parity-util-mem = { git = "https://github.com/paritytech/parity-common", branch = "ao-bump-parity-util-mem" }
