[workspace]
members = [
	"hash-db",
	"memory-db",
	"hash256-std-hasher",
	"test-support/keccak-hasher",
	"test-support/reference-trie",
	"test-support/trie-standardmap",
	"test-support/trie-bench",
	"trie-db",
	"trie-db/test",
	"trie-eip1186",
	"trie-eip1186/test",
	"trie-root",
	"trie-root/test"
]

[patch.crates-io]
parity-util-mem = { git = "https://github.com/paritytech/parity-common", branch = "ao-release-is-coming" }
