[package]
name = "check_no_std"
version = "0.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Crate that import dependency as no std for runing cargo check"
repository = "https://github.com/paritytech/trie"
license = "Apache-2.0"
edition = "2018"

[dependencies]
trie-db = { path = "../trie-db", default-features = false, version = "0.20.1"}
memory-db = { path = "../memory-db", default-features = false, version = "0.20.1"}
trie-root = { path = "../trie-root", default-features = false, version = "0.16.0"}
