[package]
name = "hash-db"
version = "0.15.2"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Trait for hash-keyed databases."
license = "Apache-2.0"
categories = [ "no-std" ]
repository = "https://github.com/paritytech/trie"

[dependencies]
parity-util-mem = { version = "0.3", optional = true }

[features]
default = ["std"]
std = ["parity-util-mem"]
