[package]
name = "hash-db"
version = "0.16.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Trait for hash-keyed databases."
license = "Apache-2.0"
categories = [ "no-std" ]
repository = "https://github.com/paritytech/trie"
edition = "2018"

[features]
default = ["std"]
std = [
]
