[package]
name = "hash256-std-hasher"
description = "Standard library hasher for 256-bit prehashed keys."
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2"
homepage = "https://github.com/paritytech/trie"
categories = [ "no-std" ]

[dependencies]
crunchy = "0.1.6"
