[package]
name = "hash256-std-hasher"
description = "Standard library hasher for 256-bit prehashed keys."
version = "0.15.2"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
homepage = "https://github.com/paritytech/trie"
categories = [ "no-std" ]

[[bench]]
name = "bench"
harness = false

[dependencies]
crunchy = "0.2.1"

[dev-dependencies]
criterion = "0.2.8"

[features]
default = ["std"]
std = []
