[package]
name = "hash256-std-hasher"
description = "Standard library hasher for 256-bit prehashed keys."
version = "0.15.2"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
homepage = "https://github.com/paritytech/trie"
categories = [ "no-std" ]
edition = "2018"

[[bench]]
name = "bench"
harness = false

[dependencies]
crunchy = "0.2.1"

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["std"]
std = []
