[package]
name = "memory-db"
version = "0.30.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "In-memory implementation of hash-db, useful for tests"
repository = "https://github.com/paritytech/trie"
license = "Apache-2.0"
edition = "2018"

[dependencies]
parity-util-mem = { version = "0.12.0", default-features = false, features = ["hashbrown"] }
hash-db = { version = "0.15.2", path = "../hash-db", default-features = false }
hashbrown = { version = "0.12.0", default-features = false, features = [ "ahash" ] }

[dev-dependencies]
keccak-hasher = { path = "../test-support/keccak-hasher" }
criterion = "0.3.3"

[features]
default = ["std"]
std = [
  "hash-db/std",
  "parity-util-mem/std",
]

[[bench]]
name = "bench"
harness = false
