[package]
name = "memory-db"
version = "0.32.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "In-memory implementation of hash-db, useful for tests"
repository = "https://github.com/paritytech/trie"
license = "Apache-2.0"
edition = "2018"

[dependencies]
hash-db = { version = "0.16.0", path = "../hash-db", default-features = false }

[dev-dependencies]
keccak-hasher = { path = "../test-support/keccak-hasher" }
criterion = "0.4.0"

[features]
default = ["std"]
std = [
  "hash-db/std",
]

[[bench]]
name = "bench"
harness = false
