[package]
name = "memory-db"
version = "0.34.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "In-memory implementation of hash-db, useful for tests"
repository = "https://github.com/paritytech/trie"
license = "Apache-2.0"
edition = "2018"

[dependencies]
hash-db = { version = "0.16.0", path = "../hash-db", default-features = false }
hashbrown = "0.15.3"
foldhash = { version = "0.1.5", default-features = false }

[dev-dependencies]
keccak-hasher = { path = "../test-support/keccak-hasher" }
criterion = "0.5.1"

[features]
default = ["std"]
std = [
  "hash-db/std",
]

[[bench]]
name = "bench"
harness = false
