[package]
name = "memorydb"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "in-memory implementation of hashdb"
repository = "https://github.com/paritytech/parity-common"
license = "GPL-3.0"

[dependencies]
heapsize = "0.4"
hashdb = { path = "../hashdb" }

[dev-dependencies]
keccak-hasher = { path = "../test-support/keccak-hasher" }
tiny-keccak = "1.4.2"