[package]
name = "ordered-trie"
version = "0.19.2"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Binary tree generic for ordered values (stack or fifo)"
repository = "https://github.com/paritytech/trie"
license = "Apache-2.0"
edition = "2018"

[dependencies]
hash-db = { path = "../hash-db", default-features = false, version = "0.15.2"}
smallvec = "1.0.0"

[dev-dependencies]
keccak-hasher = { path = "../test-support/keccak-hasher", version = "0.15.2"}
#criterion = "0.2.8"


[features]
default = ["std"]
std = [
  "hash-db/std",
]
