[package]
name = "trie-db"
version = "0.28.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Merkle-Patricia Trie generic over key hasher and node encoding"
repository = "https://github.com/paritytech/trie"
license = "Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4"
smallvec = { version = "1.0.0", features = ["union", "const_new"] }
hash-db = { path = "../hash-db", default-features = false, version = "0.16.0"}
rustc-hex = { version = "2.1.0", default-features = false, optional = true }

[features]
default = ["std"]
std = [
  "hash-db/std",
  "rustc-hex",
]
