[package]
name = "trie-db"
version = "0.28.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Merkle-Patricia Trie generic over key hasher and node encoding"
repository = "https://github.com/paritytech/trie"
license = "Apache-2.0"
edition = "2018"

[dependencies]
hash256-std-hasher = { path = "../hash256-std-hasher", version = "0.15.2", optional = true }
log = "0.4"
smallvec = { version = "1.0.0", features = ["union", "const_new"] }
rustc-hex = { version = "2.1.0", default-features = false, optional = true }
tiny-keccak = { version = "2.0.2", features = ["keccak"], optional = true }
parity-scale-codec = { version = "3.0.0", optional = true }
criterion = { version = "0.5.1", optional = true }

[dev-dependencies]
criterion = "0.5.1"
hash256-std-hasher = { path = "../hash256-std-hasher", version = "0.15.2" }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[features]
default = ["std"]
bench = [
  "std",
  "criterion",
  "test_utils",
]
test_utils = [
  "std",
  "hash256-std-hasher",
  "tiny-keccak",
  "parity-scale-codec",
]
std = [
  "rustc-hex",
]
