[package]
name = "trie-eip1186"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "EIP-1186 compliant proof generation and verification"
repository = "https://github.com/paritytech/trie"
license = "Apache-2.0"
edition = "2018"

[dependencies]
trie-db = { path = "../trie-db", default-features = false, version = "0.25"}
hash-db = { path = "../hash-db", default-features = false, version = "0.15.2"}

[features]
default = ["std"]
std = [
  "trie-db/std",
  "hash-db/std",
]
