[package]
name = "keccak-hasher"
version = "0.15.2"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Keccak-256 implementation of the Hasher trait"
repository = "https://github.com/paritytech/parity/"
license = "Apache-2.0"
edition = "2018"

[dependencies]
tiny-keccak = "1.4.2"
hash-db = { path = "../../hash-db", default-features = false, version = "0.15.2" }
hash256-std-hasher = { path = "../../hash256-std-hasher", version = "0.15.2" }
ordered-trie = { path = "../../ordered-trie", default-features = false, version = "0.19.2"}

[features]
default = ["std"]
std = [
  "hash-db/std",
]
