[package]
name = "reference-trie"
version = "0.23.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Simple reference trie format"
repository = "https://github.com/paritytech/trie/"
license = "Apache-2.0"
edition = "2018"

[dependencies]
hash-db = { path = "../../hash-db" , version = "0.15.2"}
hash256-std-hasher = { path = "../../hash256-std-hasher", version = "0.15.2" }
keccak-hasher = { path = "../keccak-hasher", version = "0.15.3" }
trie-db = { path = "../../trie-db", default-features = false, version = "0.22.0" }
trie-root = { path = "../../trie-root", default-features = false, version = "0.16.0" }
blake2-rfc = { version = "0.2.18", default-features = false }
ordered-trie = { path = "../../ordered-trie", default-features = false, version = "0.19.2"}
parity-scale-codec = { version = "2.0.0", features = ["derive"] }

# Deps for proof size build
trie-standardmap = { path = "../trie-standardmap", version = "0.15.2" }
memory-db = { path = "../../memory-db", version = "0.20.1" }

[dev-dependencies]
trie-bench = { path = "../trie-bench", version = "0.27.0" }
criterion = "0.3.3"

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "proof_size"
path = "src/compare_proof_size.rs"

[features]
default = ["std"]
# no actual support for std, only to avoid a cargo issues
std = [
  "trie-db/std",
  "trie-root/std",
  "blake2-rfc/std",
]
