[package]
name = "reference-trie"
version = "0.26.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Simple reference trie format"
repository = "https://github.com/paritytech/trie/"
license = "Apache-2.0"
edition = "2018"

[dependencies]
hash-db = { path = "../../hash-db" , version = "0.15.2"}
hash256-std-hasher = { path = "../../hash256-std-hasher", version = "0.15.2" }
keccak-hasher = { path = "../keccak-hasher", version = "0.15.3" }
trie-db = { path = "../../trie-db", default-features = false, version = "0.24.0" }
trie-root = { path = "../../trie-root", default-features = false, version = "0.17.0" }
parity-scale-codec = { version = "3.0.0", features = ["derive"] }
hashbrown = { version = "0.12.0", default-features = false, features = ["ahash"] }

[dev-dependencies]
trie-bench = { path = "../trie-bench" }
criterion = "0.3.3"

[[bench]]
name = "bench"
harness = false

[features]
default = ["std"]
# no actual support for std, only to avoid a cargo issues
std = [
  "trie-db/std",
  "trie-root/std",
]
