[package]
name = "trie-bench"
description = "Standard benchmarking suite for tries"
version = "0.30.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/trie/"
license = "Apache-2.0"
edition = "2018"

[dependencies]
keccak-hasher = { path = "../keccak-hasher", version = "0.15.2" }
trie-standardmap = { path = "../trie-standardmap", version = "0.15.2" }
hash-db = { path = "../../hash-db" , version = "0.15.2"}
memory-db = { path = "../../memory-db", version = "0.29.0" }
trie-root = { path = "../../trie-root", version = "0.17.0" }
trie-db = { path = "../../trie-db", version = "0.23.0" }
criterion = "0.3.3"
parity-scale-codec = "3.0.0"
