[package]
name = "trie-bench"
description = "Standard benchmarking suite for tries"
version = "0.38.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/trie/"
license = "Apache-2.0"
edition = "2018"

[dependencies]
keccak-hasher = { path = "../keccak-hasher", version = "0.16.0" }
trie-standardmap = { path = "../trie-standardmap", version = "0.16.0" }
trie-root = { path = "../../trie-root", version = "0.18.0" }
trie-db = { path = "../../trie-db", version = "0.28.0" }
criterion = "0.5.1"
parity-scale-codec = "3.0.0"
