[package]
name = "trie-standardmap"
description = "Standard test map for profiling tries"
version = "0.16.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
keccak-hasher = { path = "../keccak-hasher", version = "0.16.0"}
hash-db = { path = "../../hash-db" , version = "0.16.0"}
