[package]
name = "trie-db-test"
version = "0.29.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tests for trie-db crate"
repository = "https://github.com/paritytech/trie"
license = "Apache-2.0"
edition = "2018"

[[bench]]
name = "bench"
harness = false

[dependencies]
trie-db = { path = "..", version = "0.28.0"}
hash-db = { path = "../../hash-db", version = "0.16.0"}
memory-db = { path = "../../memory-db", version = "0.32.0" }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
trie-standardmap = { path = "../../test-support/trie-standardmap", version = "0.16.0" }
reference-trie = { path = "../../test-support/reference-trie", version = "0.29.0" }
hex-literal = "0.4"
criterion = "0.4.0"
env_logger = { version = "0.10", default-features = false }
log = "0.4"

[dev-dependencies]
array-bytes = "6.0.0"
