[package]
name = "trie-root-test"
version = "0.21.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tests fo trie-root crate"
repository = "https://github.com/paritytech/trie"
license = "Apache-2.0"
categories = [ ]
edition = "2018"

[dependencies]
trie-root = { path = "..", version = "0.18.0" }
hex-literal = "0.4"
keccak-hasher = { path = "../../test-support/keccak-hasher", version = "0.16.0" }
reference-trie = { path = "../../test-support/reference-trie", version = "0.29.0" }
